# audiobookshelf-skimmer

./: .gitignore  LICENSE  README.md  config.json.example  pyproject.toml  requirements.txt
audiobookshelf_skimmer/: abs_client.py  audio_utils.py  author_utils.py  cmd_foldercheck.py  cmd_info.py  cmd_sync.py  history_manager.py  llm_client.py  sync_metadata.py  title_utils.py  transcriber.py  utils.py
